@@ -251,3 +251,12 @@ class rawConfigParser :
   end
 
 
+class configParser :
+  object
+    inherit rawConfigParser
+
+    method get: ?default:string -> ?raw:bool -> ?idepth:int -> 
+      ?extravars:(string, string) Hashtbl.t 
+           -> string -> string -> string
+  end
+      
